[package]
name = "netease-cloud-music-api"
version = "1.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isahc = { version = "^1", features = ["cookies"] }
lazy_static = "*"
regex = "*"
urlqstring = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
rand = "*"
openssl = { version = "*" ,optional = true }
anyhow = "*"
hex = "*"
base64 = "*"
cbc = {version = "0.1.2", optional = true, features = ["block-padding", "alloc"]}
block-padding = {version="*", optional = true}
aes = {version = "*", optional = true}
rsa = {version = "*", optional = true}
md5 = { version = "0.7.0", optional = true }

[dev-dependencies]
async-std = { features = ["attributes"], version = "*" }

[features]
ossl = ["openssl"]
no_ossl = ["cbc", "block-padding", "aes", "md5", "rsa"]
default = ["ossl"]